--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@
   }
 } */
 
-.App {
+/* .App {
   padding: 30px;
   display: flex;
 }
@@ -56,8 +56,8 @@
 
 .active-filter {
   background-color: aquamarine;
-}
+} */
 
-.is-done {
+/* .is-done {
   opacity: 0.5;
-}
+} */
