--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,61 @@
-/* .App {
-  text-align: center;
-}
+/* font-size: calc(10px + 2vmin); */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+ul {
+  list-style-type: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
+li {
+  height: 2rem;
+  width: 100%;
+  margin: 3rem 0;
+}
+button {
+  margin: 0 1rem;
+  border-radius: 10px;
+}
 .App {
-  padding: 50px;
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: beige;
 }
-
 .todolist {
-  /* margin-top: 20vh; */
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50rem;
+  height: 50rem;
   background-color: aqua;
+  border-radius: 10%;
 }
-
 .App > div {
   margin-right: 50px;
+}
+.input-area {
+  text-align: center;
+  font-size: 2rem;
+  border-radius: 20px;
+  width: 30rem;
+  height: 4rem;
+}
+.button {
+  border-radius: 20px;
+  width: 4rem;
+  height: 4rem;
+  margin-left: 2rem;
+}
+.button:active {
+  background-color: green;
+}
+
+.filter-section {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-top: 8rem;
 }
