created branch main2

--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,16 @@
 } */
 
 .App {
-  padding: 30px;
+  padding: 50px;
   display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+.todolist {
+  /* margin-top: 20vh; */
+
+  background-color: aqua;
 }
 
 .App > div {
