--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,7 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50rem;
-  height: 50rem;
+  padding: 6rem;
   background-color: aqua;
   border-radius: 10%;
 }
