--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@ h1 {
 }
 ul {
   list-style-type: none;
+  background-color: azure;
+  padding: 1rem 0;
+  border-radius: 20px;
 }
 li {
   height: 2rem;
@@ -41,6 +44,10 @@ button {
   border-radius: 20px;
   width: 30rem;
   height: 4rem;
+}
+
+.task-item {
+  font-size: 2rem;
 }
 .button {
   border-radius: 20px;
