--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100%;
   background-color: beige;
 }
@@ -85,7 +85,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   text-align: center;
   font-size: 2rem;
   border-radius: 20px;
-  width: 30rem;
+  width: 40rem;
   height: 4rem;
 }
 
@@ -112,6 +112,74 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 .filter-section {
   display: flex;
   justify-content: center;
-  align-items: end;
-  margin-top: 8rem;
+  align-items: flex-end;
+  margin-top: 5rem;
+}
+.error {
+  display: flex;
+  justify-content: center;
+  color: red;
+  font-size: 1.5em;
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 375px) {
+  /* body {
+    width: 375px;
+  } */
+  .todolist {
+    width: 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+/* Tablets and larger devices (768px and above) */
+@media screen and (min-width: 375px) and (max-width: 768px) {
+  .todolist {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+  .input-area {
+    text-align: center;
+    font-size: 1rem;
+    width: 15rem;
+    height: 2rem;
+  }
+  .input-container {
+  }
+  .task-item {
+    font-size: 1rem;
+  }
+  .checkbox {
+    font-size: 0.5rem;
+  }
+  .button {
+    width: 3rem;
+    height: 2rem;
+
+    font-size: 1rem;
+  }
+  .del {
+    width: 5rem;
+  }
+  .filter-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+  }
+}
+
+/* Mobile devices (less than 768px) */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+}
+
+/* Larger screens (1024px and above) */
+@media (min-width: 1024px) {
 }
