--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
 /* font-size: calc(10px + 2vmin); */
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 h1 {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+h2 {
+  padding: 1rem;
+}
+
 ul {
   list-style-type: none;
   background-color: azure;
@@ -28,16 +38,7 @@ button {
 /* input[type="checkbox"] {
   display: none;
 } */
-.custom-checkbox {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  border: 2px solid #555;
-  border-radius: 5px;
-  position: relative;
-  cursor: pointer;
-}
+
 /* .custom-checkbox::after {
   content: "";
   position: absolute;
@@ -50,9 +51,7 @@ button {
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
 } */
-input[type="checkbox"]:checked + .custom-checkbox::after {
-  display: block;
-}
+
 /* button {
   margin: 0 1rem;
   border-radius: 10px;
@@ -65,21 +64,22 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   height: 100%;
   background-color: beige;
 }
-.todolist {
-  margin: 5rem 0;
+.todolist-container {
+  margin: 5rem auto;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 6rem;
   background-color: aqua;
+  border: 1px solid gray;
   border-radius: 50px;
+  /* max-width: 800px; */
 }
-.App > div {
-  /* margin-right: 50px; */
-}
+
 .input-container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .input-area {
   text-align: center;
@@ -88,24 +88,16 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   width: 40rem;
   height: 4rem;
 }
-
-.task-item {
-  font-size: 3rem;
-}
-.checkbox {
-  font-size: 2rem;
-}
-.button {
-  border-radius: 20px;
-  width: 4rem;
+.add-button {
   height: 4rem;
-  margin-left: 2rem;
+  width: 4rem;
   font-size: 1.5rem;
 }
-.del {
-  width: 5rem;
+
+.add-button:hover {
+  background-color: greenyellow;
 }
-.button:active {
+.add-button:active {
   background-color: green;
 }
 
@@ -113,13 +105,88 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  margin-top: 5rem;
+  margin: 2rem;
 }
+/* .filter-button {
+  background-color: green;
+} */
+
+.filter-button:hover {
+  background-color: greenyellow;
+}
+
+.task-section {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.task-container {
+  display: flex;
+  align-items: center;
+}
+.task-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 3rem;
+  padding: 3rem;
+  margin: 1rem;
+  width: 97%;
+  background-color: rgb(196, 172, 172);
+  border: 5px solid #9e8888;
+  border-radius: 20px;
+}
+
+input[type="checkbox"]:checked + .custom-checkbox::after {
+  display: block;
+}
+.custom-checkbox {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  border: 2px solid #555;
+  border-radius: 5px;
+  position: relative;
+  cursor: pointer;
+  margin-right: 2rem;
+}
+/* .checkbox {
+  font-size: 2rem;
+  margin-right: 2rem;
+} */
+.button-del {
+  font-size: 1.5rem;
+}
+
+.button-del :hover {
+  background-color: red;
+  margin: 15px;
+  border-radius: 20px;
+}
+/* .del {
+  width: 5rem;
+} */
+
 .error {
   display: flex;
   justify-content: center;
   color: red;
   font-size: 1.5em;
+}
+
+.links {
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  color: white;
+  background-color: cadetblue;
+}
+.links p {
+  margin-bottom: 20px;
+  margin-left: 30px;
+  font-size: 20px;
 }
 
 /* Media Queries */
@@ -129,10 +196,13 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
     width: 375px;
   } */
   .todolist {
-    width: 10rem;
+    /* width: 7rem; */
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+  .task-item {
+    width: 90%;
   }
 }
 
@@ -155,19 +225,18 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   }
   .task-item {
     font-size: 1rem;
+    width: 90%;
   }
   .checkbox {
     font-size: 0.5rem;
   }
-  .button {
+  .add-button {
     width: 3rem;
     height: 2rem;
 
     font-size: 1rem;
   }
-  .del {
-    width: 5rem;
-  }
+
   .filter-section {
     flex-direction: column;
     justify-content: center;
@@ -178,8 +247,28 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 
 /* Mobile devices (less than 768px) */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+  .todolist {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+  .input-area {
+    text-align: center;
+    font-size: 2rem;
+    width: 20rem;
+    height: 2rem;
+  }
+  .task-item {
+    width: 95%;
+  }
 }
 
 /* Larger screens (1024px and above) */
 @media (min-width: 1024px) {
 }
+
+/* @media (filter-button:active) {
+  color: ;
+} */
