--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  width: 100%;
+}
+
 h1 {
   display: flex;
   justify-content: center;
@@ -31,6 +35,12 @@ button {
   border-radius: 20px;
   width: 20vw;
 }
+svg:hover {
+  fill: red;
+}
+svg:active {
+  fill: red;
+}
 /* input {
   font-size: 5rem;
   width: 5rem;
@@ -52,27 +62,24 @@ button {
   transform: rotate(45deg);
 } */
 
-/* button {
-  margin: 0 1rem;
-  border-radius: 10px;
-} */
 .App {
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 100%;
-  background-color: beige;
+  /* width: 100vw;
+  
+  background-color: beige; */
 }
 .todolist-container {
-  margin: 5rem auto;
+  /* margin: 5rem auto; */
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 6rem;
-  background-color: aqua;
-  border: 1px solid gray;
-  border-radius: 50px;
+  background-color: #a1f7f7;
+  /* border: 1px solid gray;
+  border-radius: 50px; */
   /* max-width: 800px; */
 }
 
@@ -107,12 +114,12 @@ button {
   align-items: flex-end;
   margin: 2rem;
 }
-/* .filter-button {
-  background-color: green;
-} */
 
 .filter-button:hover {
   background-color: greenyellow;
+}
+.active-filter {
+  background-color: green;
 }
 
 .task-section {
@@ -130,11 +137,11 @@ button {
   justify-content: space-between;
   align-items: center;
   font-size: 3rem;
-  padding: 3rem;
-  margin: 1rem;
-  width: 97%;
-  background-color: rgb(196, 172, 172);
-  border: 5px solid #9e8888;
+  padding: 3rem 3rem;
+  margin: 2rem 4rem;
+  width: 100%;
+  background-color: #cfa6f7;
+  border: 5px solid #f7a6a6;
   border-radius: 20px;
 }
 
@@ -152,22 +159,6 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   cursor: pointer;
   margin-right: 2rem;
 }
-/* .checkbox {
-  font-size: 2rem;
-  margin-right: 2rem;
-} */
-.button-del {
-  font-size: 1.5rem;
-}
-
-.button-del :hover {
-  background-color: red;
-  margin: 15px;
-  border-radius: 20px;
-}
-/* .del {
-  width: 5rem;
-} */
 
 .error {
   display: flex;
@@ -184,32 +175,83 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   background-color: cadetblue;
 }
 .links p {
-  margin-bottom: 20px;
-  margin-left: 30px;
-  font-size: 20px;
+  padding: 30px;
+  font-size: 25px;
 }
 
 /* Media Queries */
 
 @media screen and (max-width: 375px) {
-  /* body {
+  body {
     width: 375px;
-  } */
+    /* height: 100vh; */
+  }
   .todolist {
-    /* width: 7rem; */
+    /* margin: 1rem 0; */
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
+  }
+
+  /* .task-section {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  } */
+  button {
+    width: 10rem;
+    font-size: 10px;
+  }
+  svg {
+    width: 25px;
+    height: 25px;
+  }
+
+  .filter-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+  }
+  .input-area {
+    text-align: center;
+    font-size: 1rem;
+    width: 15rem;
+    height: 2rem;
+  }
+  .add-button {
+    width: 3rem;
+    height: 2rem;
+    font-size: 1rem;
   }
   .task-item {
+    font-size: 1rem;
     width: 90%;
+    margin: 1rem;
+  }
+  .links p {
+    font-size: 15px;
   }
 }
 
 /* Tablets and larger devices (768px and above) */
 @media screen and (min-width: 375px) and (max-width: 768px) {
+  button {
+    width: 10rem;
+    font-size: 10px;
+  }
+  svg {
+    width: 25px;
+    height: 25px;
+  }
+  .custom-checkbox {
+    width: 25px;
+    height: 25px;
+  }
   .todolist {
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -226,14 +268,12 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   .task-item {
     font-size: 1rem;
     width: 90%;
+    margin: 1rem;
   }
-  .checkbox {
-    font-size: 0.5rem;
-  }
+
   .add-button {
     width: 3rem;
     height: 2rem;
-
     font-size: 1rem;
   }
 
@@ -242,6 +282,9 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+  }
+  .links p {
+    font-size: 20px;
   }
 }
 
@@ -256,19 +299,27 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   }
   .input-area {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1rem;
     width: 20rem;
     height: 2rem;
   }
-  .task-item {
-    width: 95%;
+  .add-button {
+    width: 3rem;
+    height: 2rem;
+    font-size: 1rem;
   }
+  .task-item {
+    width: 83%;
+  }
+
+  /* .links p {
+    width: calc(15px + (25px - 15) * ((100vw - 375px) / (1024 - 375)));
+  } */
 }
 
 /* Larger screens (1024px and above) */
 @media (min-width: 1024px) {
+  .task-item {
+    width: 85%;
+  }
 }
-
-/* @media (filter-button:active) {
-  color: ;
-} */
