--- a/src/App.css
+++ b/src/App.css
@@ -18,28 +18,27 @@ label {
   align-items: center;
   font-size: 2rem;
 }
+
 h2 {
-  padding: 1rem;
+  padding: 8px 4px;
 }
 
 ul {
   list-style-type: none;
   background-color: azure;
-  padding: 1rem 0;
+  /* padding: 1rem 0; */
   border-radius: 20px;
-}
-
-li {
-  height: 2rem;
-  width: 100%;
-  margin: 3rem 0;
 }
 
 button {
   margin: 10px;
   border-radius: 20px;
-  width: 20vw;
+  width: 100%;
   cursor: pointer;
+}
+
+.filter-section button:hover {
+  background-color: greenyellow;
 }
 
 svg {
@@ -51,19 +50,6 @@ svg:hover {
   cursor: pointer;
 }
 
-/* .custom-checkbox::after {
-  content: "";
-  position: absolute;
-  display: none;
-  left: 9px;
-  top: 5px;
-  width: 6px;
-  height: 12px;
-  border: solid #000;
-  border-width: 0 3px 3px 0;
-  transform: rotate(45deg);
-} */
-
 .App {
   display: block;
   justify-content: center;
@@ -74,8 +60,8 @@ svg:hover {
 .todolist-container {
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 6rem;
+  align-items: flex-start;
+  padding-top: 30px;
   background-color: #a1f7f7;
   height: calc(100vh - 84px);
 }
@@ -88,10 +74,10 @@ svg:hover {
 
 .input-area {
   text-align: center;
-  font-size: 2rem;
+  font-size: 28px;
   border-radius: 20px;
-  width: 40rem;
-  height: 4rem;
+  width: 100%;
+  height: 58px;
 }
 
 input:invalid {
@@ -99,16 +85,16 @@ input:invalid {
 }
 
 .add-button {
-  height: 4rem;
-  width: 4rem;
-  font-size: 1.5rem;
+  height: 58px;
+  width: 24%;
+  font-size: 28px;
   cursor: pointer;
 }
 
 .add-button-disabled {
-  height: 4rem;
-  width: 4rem;
-  font-size: 1.5rem;
+  height: 58px;
+  width: 24%;
+  font-size: 28px;
   cursor: pointer;
   /* display: none; */
 }
@@ -121,27 +107,28 @@ input:invalid {
   background-color: green;
 }
 
-.btnOverlay {
-  /* ustaw opacity na 1, zeby zobaczyc jak to wyglada */
-  opacity: 1;
+/* .btnOverlay { */
+/* ustaw opacity na 1, zeby zobaczyc jak to wyglada */
+/* opacity: 1;
   position: absolute;
   width: 60px;
   height: 60px;
   margin: 10px;
   background-color: red;
   text-decoration: line-through;
-}
+} */
 
 .filter-section {
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  margin: 2rem;
+  margin: 18px;
 }
 
 .filter-button:hover {
   background-color: greenyellow;
 }
+
 .active-filter {
   background-color: green;
 }
@@ -151,8 +138,9 @@ input:invalid {
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-height: 45vh;
+  max-height: 52vh;
   overflow: auto;
+  padding: 20px;
 }
 
 .task-container {
@@ -164,13 +152,14 @@ input:invalid {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 3rem;
-  padding: 3rem 3rem;
-  margin: 3rem 5rem;
-  width: 100%;
+  font-size: 36px;
+  padding: 20px;
+  margin: 0 auto;
+  margin-bottom: 12px;
   background-color: #cfa6f7;
   border: 5px solid #f7a6a6;
   border-radius: 20px;
+  /* overflow: hidden; */
 }
 
 .task-message {
@@ -182,6 +171,7 @@ input:invalid {
 input[type="checkbox"]:checked + .custom-checkbox::after {
   display: block;
 }
+
 .custom-checkbox {
   display: inline-block;
   width: 30px;
@@ -191,71 +181,92 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   border-radius: 5px;
   position: relative;
   cursor: pointer;
-  margin-right: 2rem;
+  margin-right: 10px;
 }
 
 .error {
   display: flex;
   justify-content: center;
   color: red;
-  font-size: 1.5em;
+  font-size: 26px;
+}
+
+.errorHidden {
+  display: flex;
+  justify-content: center;
+  color: red;
+  font-size: 28px;
+  opacity: 0;
 }
 
 .links {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   text-align: center;
   justify-content: center;
   color: white;
   background-color: cadetblue;
   height: 84px;
 }
+
 .links p {
   padding: 30px;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 /* Media Queries */
 
 /* Mobile devices (less than 768px) */
 
-@media screen and (min-width: 375px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   body {
     min-width: 375px;
   }
+
   button {
-    width: 10rem;
-    font-size: 10px;
+    width: 90px;
+    margin: 5px;
+    font-size: 8px;
   }
+
   svg {
     width: 25px;
     height: 25px;
   }
-  label {
-    font-size: 1.5rem;
+
+  h2 {
+    padding: 6px 3px;
   }
+
   .custom-checkbox {
     width: 25px;
     height: 25px;
   }
 
-  /* .todolist-container {
-    display: flex;
-    justify-content: center;
-  } */
-
-  .todolist {
-    /* margin: 1rem 0; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
+  .todolist-container {
+    padding-top: 10px;
   }
+
   .input-area {
     text-align: center;
-    font-size: 1rem;
-    width: 15rem;
-    height: 2rem;
+    font-size: 15px;
+    width: 60%;
+    height: 28px;
+  }
+
+  .error {
+    display: flex;
+    justify-content: center;
+    color: red;
+    font-size: 18px;
+  }
+
+  .errorHidden {
+    display: flex;
+    justify-content: center;
+    color: red;
+    font-size: 18px;
+    opacity: 0;
   }
 
   .task-message {
@@ -263,76 +274,79 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   }
 
   .task-section {
-    width: 90%;
-    margin: 0 2rem;
-    padding-left: 2rem;
+    width: 100%;
+    margin: 0 auto;
+    padding: 15px 0px;
   }
 
   .task-item {
-    font-size: 1rem;
+    font-size: 20px;
     width: 90%;
-    margin: 1rem;
   }
 
   .add-button,
   .add-button-disabled {
-    width: 3rem;
-    height: 2rem;
-    font-size: 1rem;
+    width: 15%;
+    height: 32px;
+    font-size: 18px;
   }
-
-  /* .add-button-disabled {
-    width: 3rem;
-    height: 2rem;
-    font-size: 1rem;
-  } */
 
   .filter-section {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2rem;
+    margin: 14px;
   }
-  .links p {
+
+  /* .links p {
     font-size: 16px;
-  }
+  } */
 }
 
 /* Tablets and larger devices (768px and above) */
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .todolist {
+@media screen and (min-width: 768px) {
+  button {
+    margin: 5px;
+  }
+  /* .todolist {
     margin: 1rem 0;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 1rem;
-  }
-  .input-area {
+  } */
+  /* .input-area {
     text-align: center;
     font-size: 1rem;
     width: 20rem;
     height: 2rem;
-  }
-  .add-button {
+  } */
+  /* .add-button {
     width: 3rem;
     height: 2rem;
     font-size: 1rem;
+  } */
+
+  .task-section {
+    width: 100%;
   }
+
   .task-item {
-    width: 83%;
+    width: 100%;
+    /* margin: 10px; */
   }
-  .task-message {
+  /* .task-message {
     font-size: 18px;
-  }
-  .links p {
+  } */
+  /* .links p {
     font-size: 20px;
-  }
+  } */
 }
 
 /* Larger screens (1024px and above) */
 @media (min-width: 1024px) {
   .task-item {
-    width: 85%;
+    width: 100%;
   }
 }
