--- a/src/AppHeader.css
+++ b/src/AppHeader.css
@@ -1,4 +1,6 @@
-/* Canceling default styles */
+/* Canceling default styles 
+Header section
+*/
 
 * {
   margin: 0;
@@ -77,6 +79,7 @@ svg:hover {
   font-size: 28px;
   border-radius: 20px;
   width: 100%;
+  margin-right: 15px;
   height: 58px;
 }
 
@@ -107,17 +110,6 @@ input:invalid {
   background-color: green;
 }
 
-/* .btnOverlay { */
-/* ustaw opacity na 1, zeby zobaczyc jak to wyglada */
-/* opacity: 1;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  margin: 10px;
-  background-color: red;
-  text-decoration: line-through;
-} */
-
 .filter-section {
   display: flex;
   justify-content: center;
@@ -131,87 +123,6 @@ input:invalid {
 
 .active-filter {
   background-color: green;
-}
-
-.task-section {
-  display: block;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-height: 52vh;
-  overflow: auto;
-  padding: 20px;
-}
-
-.task-container {
-  display: flex;
-  align-items: center;
-}
-
-.task-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 36px;
-  padding: 20px;
-  margin: 0 auto;
-  margin-bottom: 12px;
-  background-color: #cfa6f7;
-  border: 5px solid #f7a6a6;
-  border-radius: 20px;
-  /* overflow: hidden; */
-}
-
-.task-message {
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-}
-
-input[type="checkbox"]:checked + .custom-checkbox::after {
-  display: block;
-}
-
-.custom-checkbox {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  background-color: #fff;
-  border: 2px solid #555;
-  border-radius: 5px;
-  position: relative;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-.error {
-  display: flex;
-  justify-content: center;
-  color: red;
-  font-size: 26px;
-}
-
-.errorHidden {
-  display: flex;
-  justify-content: center;
-  color: red;
-  font-size: 28px;
-  opacity: 0;
-}
-
-.links {
-  display: flex;
-  /* flex-direction: column; */
-  text-align: center;
-  justify-content: center;
-  color: white;
-  background-color: cadetblue;
-  height: 84px;
-}
-
-.links p {
-  padding: 30px;
-  font-size: 20px;
 }
 
 /* Media Queries */
@@ -250,7 +161,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   .input-area {
     text-align: center;
     font-size: 15px;
-    width: 60%;
+    width: 80%;
     height: 28px;
   }
 
@@ -297,10 +208,6 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
     align-items: center;
     margin: 14px;
   }
-
-  /* .links p {
-    font-size: 16px;
-  } */
 }
 
 /* Tablets and larger devices (768px and above) */
@@ -309,24 +216,6 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   button {
     margin: 5px;
   }
-  /* .todolist {
-    margin: 1rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-  } */
-  /* .input-area {
-    text-align: center;
-    font-size: 1rem;
-    width: 20rem;
-    height: 2rem;
-  } */
-  /* .add-button {
-    width: 3rem;
-    height: 2rem;
-    font-size: 1rem;
-  } */
 
   .task-section {
     width: 100%;
@@ -334,14 +223,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 
   .task-item {
     width: 100%;
-    /* margin: 10px; */
   }
-  /* .task-message {
-    font-size: 18px;
-  } */
-  /* .links p {
-    font-size: 20px;
-  } */
 }
 
 /* Larger screens (1024px and above) */
