--- a/src/AppHeader.css
+++ b/src/AppHeader.css
@@ -61,11 +61,20 @@ svg:hover {
 
 .todolist-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
-  padding-top: 30px;
+  align-items: center;
+  /* padding-top: 30px; */
   background-color: #a1f7f7;
   height: calc(100vh - 84px);
+}
+
+.todolist-log {
+  display: flex;
+  justify-content: end;
+  margin-right: 150px;
+  background-color: blue;
+  width: 100%;
 }
 
 .input-container {
