--- a/src/AppHeader.css
+++ b/src/AppHeader.css
@@ -1,7 +1,7 @@
 /* Canceling default styles 
 Header section
 */
-
+/* import 'bootstrap/dist/css/bootstrap.min.css'; */
 * {
   margin: 0;
   padding: 0;
