--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,4 +1,4 @@
-form {
+/* form {
   margin: 40px;
 }
 
@@ -50,17 +50,21 @@ a:hover {
   background-color: greenyellow;
   font-size: 20px;
 }
-
+ */
 .login-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  /* text-align: center; */
   align-items: center;
-  background-color: rgb(180, 198, 231);
-  height: 100vh;
+  background-color: rgb(247, 250, 255);
+  /* height: 100vh; */
 }
 
-.container {
+/* .container {
   margin-bottom: 20px;
+} */
+
+.nav-link:hover {
+  background-color: none;
 }
