--- a/src/Todolist.css
+++ b/src/Todolist.css
@@ -75,15 +75,17 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
   opacity: 0;
 }
 
+/*
 .links {
   display: flex;
-  /* flex-direction: column; */
+   flex-direction: column; 
   text-align: center;
   justify-content: center;
   color: white;
   background-color: cadetblue;
   height: 84px;
 }
+*/
 
 .links p {
   padding: 30px;
@@ -153,6 +155,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
     width: 100%;
     margin: 0 auto;
     padding: 15px 0px;
+    /* height: 32vh; */
   }
 
   .task-item {
@@ -180,6 +183,10 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 @media screen and (min-width: 768px) {
   button {
     margin: 5px;
+  }
+
+  .task-section {
+    /* height: 22vh; */
   }
 
   .task-section {
