--- a/src/pages/Signup.css
+++ b/src/pages/Signup.css
@@ -1,10 +1,8 @@
-form {
+/* form {
   margin: 0px;
-}
+} 
 
 input {
-  font-size: 20px;
-  border-radius: 10px;
   text-align: center;
 }
 
@@ -23,9 +21,9 @@ p {
   background-color: greenyellow;
 }
 
-/* .sign-in {
+ .sign-in {
   margin-top: 20px;
-} */
+} 
 
 .signup-container a {
   margin-bottom: 30px;
@@ -54,4 +52,12 @@ a:hover {
 
 .container {
   margin-bottom: 20px;
+}
+*/
+
+@media (max-width: 640px) {
+  .sm\:text-xs {
+    font-size: 0.75rem /* 12px */;
+    line-height: 1rem /* 16px */;
+  }
 }
