--- a/src/Todolist.css
+++ b/src/Todolist.css
@@ -1,5 +1,37 @@
 /* Tasks section */
 
+input:invalid {
+  border: 3px solid red;
+}
+
+.add-button {
+  height: 58px;
+  width: 24%;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+.add-button-disabled {
+  height: 58px;
+  width: 24%;
+  font-size: 28px;
+  cursor: pointer;
+  /* display: none; */
+}
+
+.add-button:hover {
+  background-color: greenyellow;
+}
+
+.add-button:active {
+  background-color: green;
+}
+
+.todolist-container {
+  padding-top: 10px;
+  height: calc(100vh - 188px);
+}
+
 .task-section {
   display: block;
   justify-content: center;
@@ -123,6 +155,7 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 
   .todolist-container {
     padding-top: 10px;
+    height: calc(100vh - 136px);
   }
 
   .input-area {
@@ -183,6 +216,10 @@ input[type="checkbox"]:checked + .custom-checkbox::after {
 @media screen and (min-width: 768px) {
   button {
     margin: 5px;
+  }
+  .todolist-container {
+    padding-top: 10px;
+    height: calc(100vh - 108px);
   }
 
   .task-section {
