--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,38 @@
-/* .App {
-  text-align: center;
+*/
+/* import 'bootstrap/dist/css/bootstrap.min.css'; */
+/* Canceling default styles  */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* General */
+body {
+  width: 100%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+label {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  padding: 8px 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
-
-/* .App {
-  padding: 30px;
-  display: flex;
+ul {
+  list-style-type: none;
+  background-color: azure;
+  padding: 1rem 0;
+  border-radius: 20px;
 }
 
-.App > div {
-  margin-right: 50px;
+button {
+  margin: 10px;
+  border-radius: 20px;
+  width: 100%;
+  cursor: pointer;
 }
-
-.error {
-  border: red 1px solid;
-}
-
-.error-message {
-  color: red;
-}
-
-.active-filter {
-  background-color: aquamarine;
-} */
-
-/* .is-done {
-  opacity: 0.5;
-} */
