--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 /* General */
 body {
   width: 100%;
+  height: 100%;
 }
 
 label {
