--- a/src/components/Todolist/Todolist.css
+++ b/src/components/Todolist/Todolist.css
@@ -7,9 +7,11 @@
   background-color: #99e9e9; 
   align-items: center;
   padding-top: 20px;
-  height: calc(100vh - 84px); */
+
+   */
   position: static;
 
+  /* height: calc(100vh - 174px); */
   top: 0;
   z-index: -1;
   /* position: static; */
@@ -110,7 +112,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-height: 42vh;
+  max-height: 46vh;
   overflow: auto;
   padding: 10px 10px 0px 0px;
 }
@@ -196,7 +198,7 @@ svg:hover {
 
   .todolist-container {
     padding-top: 10px;
-    height: calc(100vh - 200px);
+    /* height: calc(100vh - 200px); */
   }
 
   .item-container {
@@ -265,12 +267,13 @@ svg:hover {
   }
   .todolist-container {
     padding-top: 10px;
+    flex: 1;
     height: calc(100vh - 172px);
   }
 
   .task-section {
     width: 100%;
-    max-height: 42vh;
+    /* max-height: 42vh; */
   }
 
   .task-item {
@@ -280,7 +283,7 @@ svg:hover {
 
 @media screen and (max-height: 800px) {
   .task-section {
-    max-height: 35vh;
+    max-height: 33vh;
   }
 
   /* .todolist-container {
