--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,16 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body,
+html,
+#root,
+.App {
   height: 100%;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
 }
 
 /* code {
