--- a/src/components/Todolist/Todolist.css
+++ b/src/components/Todolist/Todolist.css
@@ -18,34 +18,8 @@
 }
 
 /* Task section */
-.task-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 25px;
-  background-color: white;
-  font-family: "Roboto", serif;
-  /* font-family: "Kalam", cursive; */
-  font-weight: 400;
-  font-style: normal;
-
-  padding: 15px;
-  /* margin: 0 auto; */
-  margin-bottom: 12px;
-  /* background-color: #cfa6f7; */
-  border: 2px solid rgb(156, 142, 142);
-  border-radius: 8px;
-  /* overflow: hidden; */
-}
-
 .task-item-completed {
   text-decoration: line-through;
-}
-
-.task-message {
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
 }
 
 input[type="checkbox"]:checked + .custom-checkbox::after {
@@ -94,7 +68,6 @@ svg:hover {
 
   .todolist-container {
     padding-top: 10px;
-    /* height: calc(100vh - 200px); */
   }
 
   .item-container {
@@ -103,10 +76,9 @@ svg:hover {
 
   .input-area {
     text-align: center;
-    /* font-size: 15px; */
     width: 80%;
     height: 28px;
-  }
+  } /**/
 
   .error {
     display: flex;
@@ -131,7 +103,6 @@ svg:hover {
     width: 100%;
     margin: 0 auto;
     padding: 10px 0px;
-    /* height: 32vh; */
   }
 
   .task-item {
@@ -150,8 +121,6 @@ svg:hover {
     display: flex;
     justify-content: start;
     align-items: center;
-    /* margin: 10px 0px;
-    width: 100%; */
   }
 }
 
@@ -169,7 +138,6 @@ svg:hover {
 
   .task-section {
     width: 100%;
-    /* max-height: 42vh; */
   }
 
   .task-item {
@@ -181,10 +149,6 @@ svg:hover {
   .task-section {
     max-height: 40vh;
   }
-
-  /* .todolist-container {
-    height: calc(60vh);
-  } */
 }
 
 /* Larger screens (1024px and above) */
